--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -1,89 +1,58 @@
-# SPDX-FileCopyrightText: 2021-2022 Rafael G. Martins <rafael@rafaelmartins.eng.br>
 # SPDX-License-Identifier: BSD-3-Clause
+# Drop-in replacement CMakeLists.txt for firmware/
+# - Uses keyword-style target_link_libraries (PRIVATE) everywhere
+# - Adds features subdir and screen-features sources
+# - Ensures UF2 output via pico_add_extra_outputs
+# - Globs *.c in firmware/ (not recursive) to include main/synth/screen/midi-impl files
 
 cmake_minimum_required(VERSION 3.12)
 
 include(pico_sdk_import.cmake)
 
-project(pico-synth)
+project(pico-synth C CXX ASM)
 
 pico_sdk_init()
 
+# Gather sources that live in this folder (main, synth, screens, midi-impl, etc.)
+file(GLOB FW_SOURCES CONFIGURE_DEPENDS
+    *.c
+)
+
 add_executable(pico-synth
-    main.c
-
-    eeprom-types.h
-
-    midi-impl.c
-    midi-notif.c
-    midi-notif.h
-
-    screen-main.c
-    screen-main.h
-    screen-settings.c
-    screen-settings.h
-    screen-settings-channel.c
-    screen-settings-channel.h
-    screen-settings-channel-midi.c
-    screen-settings-channel-midi.h
-    screen-settings-channel-preset.c
-    screen-settings-channel-preset.h
-    screen-settings-channels.c
-    screen-settings-channels.h
-    screen-settings-eeprom-erase.c
-    screen-settings-eeprom-erase.h
-    screen-settings-eeprom-error.c
-    screen-settings-eeprom-error.h
-    screen-settings-eeprom-updating.c
-    screen-settings-eeprom-updating.h
-    screen-settings-preset.c
-    screen-settings-preset.h
-    screen-settings-preset-adsr-attack.c
-    screen-settings-preset-adsr-attack.h
-    screen-settings-preset-adsr-decay.c
-    screen-settings-preset-adsr-decay.h
-    screen-settings-preset-adsr-release.c
-    screen-settings-preset-adsr-release.h
-    screen-settings-preset-adsr-sustain.c
-    screen-settings-preset-adsr-sustain.h
-    screen-settings-preset-waveform.c
-    screen-settings-preset-waveform.h
-    screen-settings-presets.c
-    screen-settings-presets.h
-    screen-splash.c
-    screen-splash.h
-
-    synth.c
-    synth.h
-    synth-data.h
+    ${FW_SOURCES}
+    # If you prefer explicit listing, replace the GLOB above with files here.
 )
 
-target_link_libraries(pico-synth PRIVATE
-    pico_stdlib
-    pico_multicore
-
-    pico_synth_engine
-    pico_synth_midi
-    pico_synth_tui
-    hardware_clocks
-    hardware_i2c
-    hardware_uart
-    hardware_pio
-)
-
+# TinyUSB quirk from original build
 target_compile_definitions(tinyusb_device INTERFACE
     TUD_OPT_RP2040_USB_DEVICE_ENUMERATION_FIX=1
 )
 
+# StdIO selection (UART default); switch to USB by enabling the USB line and disabling UART
 pico_enable_stdio_uart(pico-synth 1)
+# pico_enable_stdio_usb(pico-synth 1)
 
+# Pull in sub-libraries
 add_subdirectory(engine)
 add_subdirectory(midi)
 add_subdirectory(tui)
-
-# Ensure UF2 artifacts are generated
-pico_add_extra_outputs(pico-synth)
-
+# New features module (must exist; remove if not using features)
 add_subdirectory(features)
-target_sources(pico-synth PRIVATE screen-features.c screen-features.h)
-target_link_libraries(pico-synth pico_synth_features)
+
+# Link everything using the keyword signature (no mixing between keyword/plain)
+target_link_libraries(pico-synth
+    PRIVATE
+        pico_stdlib
+        pico_multicore
+        hardware_clocks
+        hardware_i2c
+        hardware_uart
+        hardware_pio
+        pico_synth_engine
+        pico_synth_midi
+        pico_synth_tui
+        pico_synth_features
+)
+
+# Produce .uf2/.elf/.map
+pico_add_extra_outputs(pico-synth)
