--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.12)
 
 include(pico_sdk_import.cmake)
 
-project(pico-synth)
+project(pico-synth C CXX ASM)
 
 pico_sdk_init()
 
@@ -53,7 +53,7 @@ add_executable(pico-synth
     screen-splash.c
     screen-splash.h
 
-    # NEW: Features screen
+    # New features screen
     screen-features.c
     screen-features.h
 
@@ -62,25 +62,23 @@ add_executable(pico-synth
     synth-data.h
 )
 
-# Link using keyword signature
-target_link_libraries(pico-synth PRIVATE
-    pico_stdlib
-    pico_multicore
+# Link using keyword signature only
+target_link_libraries(pico-synth
+    PRIVATE
+        pico_stdlib
+        pico_multicore
+        hardware_clocks
+        hardware_i2c
+        hardware_uart
+        hardware_pio
 
-    # NEW: required hw libs used across the project
-    hardware_clocks
-    hardware_i2c
-    hardware_uart
-    hardware_pio
-
-    pico_synth_engine
-    pico_synth_midi
-    pico_synth_tui
-
-    # NEW: features module
-    pico_synth_features
+        pico_synth_engine
+        pico_synth_midi
+        pico_synth_tui
+        pico_synth_features
 )
 
+# TinyUSB quirk (already present in downstream)
 target_compile_definitions(tinyusb_device INTERFACE
     TUD_OPT_RP2040_USB_DEVICE_ENUMERATION_FIX=1
 )
@@ -91,5 +89,4 @@ pico_add_extra_outputs(pico-synth)
 add_subdirectory(engine)
 add_subdirectory(midi)
 add_subdirectory(tui)
-# NEW: features subdir
 add_subdirectory(features)
