--- a/firmware/features/CMakeLists.txt
+++ b/firmware/features/CMakeLists.txt
@@ -1,23 +1,19 @@
-# firmware/features/CMakeLists.txt (drop-in)
-# Build features as a plain STATIC library with only its own sources.
+# CMake for pico_synth_features
+# Drop this file into: firmware/features/CMakeLists.txt
+
 add_library(pico_synth_features STATIC
     features.c
-    features-config.h
     feature_midi_monitor.c
 )
 
-# Expose local and dependent public headers (tui/midi)
-target_include_directories(pico_synth_features
-    PUBLIC
-        ${CMAKE_CURRENT_LIST_DIR}
-        ${CMAKE_CURRENT_LIST_DIR}/../tui/include
-        ${CMAKE_CURRENT_LIST_DIR}/../midi/include
+# Headers from this dir + TUI + MIDI public headers
+target_include_directories(pico_synth_features PUBLIC
+    ${CMAKE_CURRENT_LIST_DIR}
+    ${CMAKE_CURRENT_LIST_DIR}/../tui/include
+    ${CMAKE_CURRENT_LIST_DIR}/../midi/include
 )
 
-# Minimal link to pull in SDK include dirs (NO TUI/MIDI link here!)
-# This avoids dragging object sources from those libs into this target.
-target_link_libraries(pico_synth_features
-    PUBLIC
-        pico_stdlib
-        hardware_uart
+# Pull in SDK include paths so headers like <hardware/uart.h> resolve
+target_link_libraries(pico_synth_features PUBLIC
+    pico_stdlib
 )
