--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -1,11 +1,10 @@
-# SPDX-FileCopyrightText: 2021-2022 Rafael G. Martins
 # SPDX-License-Identifier: BSD-3-Clause
 
 cmake_minimum_required(VERSION 3.12)
 
 include(pico_sdk_import.cmake)
 
-project(pico-synth C CXX ASM)
+project(pico-synth)
 
 pico_sdk_init()
 
@@ -53,32 +52,23 @@ add_executable(pico-synth
     screen-splash.c
     screen-splash.h
 
-    # New features screen
-    screen-features.c
-    screen-features.h
-
     synth.c
     synth.h
     synth-data.h
 )
 
-# Link using keyword signature only
-target_link_libraries(pico-synth
-    PRIVATE
-        pico_stdlib
-        pico_multicore
-        hardware_clocks
-        hardware_i2c
-        hardware_uart
-        hardware_pio
+# Main app links against Pico SDK and our internal libs
+target_link_libraries(pico-synth PRIVATE
+    pico_stdlib
+    pico_multicore
 
-        pico_synth_engine
-        pico_synth_midi
-        pico_synth_tui
-        pico_synth_features
+    pico_synth_engine
+    pico_synth_midi
+    pico_synth_tui
+    pico_synth_features
 )
 
-# TinyUSB quirk (already present in downstream)
+# TinyUSB quirk fix
 target_compile_definitions(tinyusb_device INTERFACE
     TUD_OPT_RP2040_USB_DEVICE_ENUMERATION_FIX=1
 )
@@ -86,6 +76,7 @@ target_compile_definitions(tinyusb_device INTERFACE
 pico_enable_stdio_uart(pico-synth 1)
 pico_add_extra_outputs(pico-synth)
 
+# Build internal components
 add_subdirectory(engine)
 add_subdirectory(midi)
 add_subdirectory(tui)
